Refactoring of holiday calculator